# impTer

./: .envrc  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  impTerp.cabal
docs/: docs.lhs  docs.md  index.html
src/: Interpreter.hi  Interpreter.hs  Main.hi  Main.hs  Parsers.hi  Parsers.hs  Utils.hi  Utils.hs
test/: t1  t2  t3  t4  t5  t6  t7  t8
